--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
+                    <!-- menu when not connected -->
                     <ul *ngIf="!isLogged" class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/">Accueil<span class="sr-only"></span></a>
@@ -22,6 +23,7 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                     </ul>
+                    <!-- menu when connected -->
                     <ul *ngIf="isLogged" class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/">Accueil</a>
@@ -51,13 +53,16 @@
                     </ul>
                 </div>
             </nav>
+            <!-- Menu for mobile -->
             <nav (mouseleave)="mobileMenuOpened = false"
                  class="navbar navbar-expand navbar-dark bg-dark mobile tooSmallHeight">
+                <!-- mobile menu -->
                 <div class="headerMobile tooSmallHeightHide">
                     <a class="navbar-brand" routerLink="/">Assos PNS</a>
                     <div (click)="mobileMenuOpened = !mobileMenuOpened">
                         <mat-icon>menu</mat-icon>
                     </div>
+                    <!-- mobile menu with links -->
                     <div (click)="mobileMenuOpened = false" *ngIf="mobileMenuOpened" class="mobileMenu">
                         <ul *ngIf="connectedUser === null" class="navbar-nav">
                             <li (click)="mobileMenuOpened = false" class="nav-item">
@@ -103,6 +108,7 @@
                         </ul>
                     </div>
                 </div>
+                <!-- Assos choice when sidenav is hidden -->
                 <div *ngIf="displayAssosPages" class="assoChoiceMobileWrapper ">
                     <div class="assoChoiceMobile">
                         <mat-icon (click)="displayAssosPages = false; mobileMenuOpened = false;">close</mat-icon>
@@ -208,5 +214,4 @@
         <!--d'utilisations</a></p>-->
         <!--</footer>-->
     </div>
-
 </ion-app>
