--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
                     <!-- menu when not connected -->
                     <ul *ngIf="!isLogged" class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/">Accueil<span class="sr-only"></span></a>
+                            <a class="nav-link" routerLink="/">Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/aboutAll">Nous découvrir<span
@@ -65,6 +65,9 @@
                     <!-- mobile menu with links -->
                     <div (click)="mobileMenuOpened = false" *ngIf="mobileMenuOpened" class="mobileMenu">
                         <ul *ngIf="connectedUser === null" class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" routerLink="/">Accueil</a>
+                            </li>
                             <li (click)="mobileMenuOpened = false" class="nav-item">
                                 <a class="nav-link" routerLink="/aboutAll">Nous découvrir</a>
                             </li>
