--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
                     </div>
                     <!-- mobile menu with links -->
                     <div (click)="mobileMenuOpened = false" *ngIf="mobileMenuOpened" class="mobileMenu">
-                        <ul *ngIf="connectedUser === null" class="navbar-nav">
+                        <ul *ngIf="!isLogged || connectedUser === null" class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link" routerLink="/">Accueil</a>
                             </li>
