--- a/src/app/components/articles-components/add-event/add-event.component.scss
+++ b/src/app/components/articles-components/add-event/add-event.component.scss
@@ -44,7 +44,7 @@ app-file-upload {
   flex-wrap: wrap;
 }
 
-#startDateTime, #endDateTime {
+.startDateTime, .endDateTime {
   flex: 1;
   display: flex;
   flex-wrap: wrap;
