--- a/src/app/components/assos-components/assos-overview/assos-overview.component.html
+++ b/src/app/components/assos-components/assos-overview/assos-overview.component.html
@@ -45,19 +45,19 @@
 <app-asso-presentation [name]="'Bureau des Élèves'"
                        [descriptions]="['Le Bureau des Élèves c\’est la plus grosse association du campus et celle dont tu entendras parler tout le temps. Des afterworks, des soirées dantesques et un weekend d\’intégration, voilà au minimum ce qu\’il saura te proposer. C’est ce BDE qui nous permet de facilement sortir, se rencontrer et participer à la vie étudiante.',
                        'N\’hésite pas à t\’en rapprocher si tu as un don pour l\’organisation, ils pourraient avoir besoin de toi !']"
-                       [contact]="'bde@polytech.unice.fr'"
+                       [mail]="'bde@polytech.unice.fr'"
                        [logo]="'assets/logoAssos/logoBDE.png'"></app-asso-presentation>
 
 <app-asso-presentation [name]="'Bureau des Jeux'"
                        [descriptions]="['Le BDJ est l\'association de Polytech Nice Sophia qui est dédiée à tout type de jeux ! De nombreuses activités ludiques te seront proposées tout au long de l\'année afin de partager de bons moments et apprendre à se connaitre dans un esprit de convivialité. Du laser Quest et du Paintball pour se défouler et affronter ses amis, des Jeux de Rôle pour s\'évader dans un autre monde le temps d\'une soirée, des Karaokés pour montrer ses talents cachés de chanteur... Nous proposons même de quoi se divertir entre deux cours, avec deux baby-foot à disposition dans le foyer des Templiers.',
                           'Tout est accessible à chaque étudiant mais une cotisation de 7€ permet d\'avoir des réductions intéressantes à nos événements, tout en donnant un petit coup de pouce à l\'association !']"
-                       [contact]="'bdj@polytech.unice.fr'"
+                       [mail]="'bdj@polytech.unice.fr'"
                        [logo]="'assets/logoAssos/logoBDJ.png'"></app-asso-presentation>
 
 <app-asso-presentation [name]="'Bureau du Sport'"
                        [descriptions]="['Le Bureau du Sport (BDS) est le club de Polytech Nice Sophia qui va te faire bouger. Tout au long de l\’année des événements sportifs et des sorties sont organisés alors on compte sur toi pour être motivé et venir participer !',
                           'Enfin, bonne nouvelle, il n\’y a pas de cotisation supplémentaire ! Elle est incluse dans celle du BDE.']"
-                       [contact]="'bdh@polytech.unice.fr'"
+                       [mail]="'bdh@polytech.unice.fr'"
                        [logo]="'assets/logoAssos/logoBDS.png'"></app-asso-presentation>
 
 <app-asso-presentation [name]="'Bureau des Arts'"
@@ -67,7 +67,7 @@
                           'Pour avoir accès à tous ces loisirs, il te suffit de faire un don de 5€ (15€ pour accéder à la salle de musique toute l\'année en illimité) à ton BDA préféré.',
                           'Alors n\'hésite plus et viens te perfectionner ou découvrir de nouveaux hobbies. Des séances d\'essai te sont proposée en Septembre.',
                           'Et si toutefois ton art n\'est pas représenté, viens nous voir et joint-toi à nous dans cette belle aventure artistique qu\'est le BDA de Polytech Nice Sophia.']"
-                       [contact]="'bda@polytech.unice.fr'"
+                       [mail]="'bda@polytech.unice.fr'"
                        [logo]="'assets/logoAssos/logoBDA.png'"></app-asso-presentation>
 
 <app-asso-presentation [name]="'Polytech Nice Conseil'"
@@ -77,13 +77,13 @@
                        'Alors si vous souhaitez consolider votre CV, développer votre réseau professionnel ou simplement vous faire de l’argent, n’hésitez pas à rejoindre l’association Polytech Nice Conseil.',
                        'Si vous êtes intéressé n’hésitez pas à rejoindre le groupe Facebook : Polytech Nice Conseil Recrutement 2018-2019. Vous pouvez aussi aimer la page Facebook : Polytech Nice Conseil ou aller voir notre site internet : https://conseil.polytechnice.fr',
                        'Nous avons aussi un mail : pnc.polytech.nice@gmail.com où vous pouvez poser toutes vos questions.']"
-                       [contact]="'pnc.polytech.nice@gmail.com'"
+                       [mail]="'pnc.polytech.nice@gmail.com'"
                        [logo]="'assets/logoAssos/logoPNC.png'"></app-asso-presentation>
 
 <app-asso-presentation [name]="'Humanitaire et Environnement'"
                        [descriptions]="['Grande nouveauté cette année, le Bureau De l’Humanitaire (BDH) devient: Bureau De l’Humanitaire et de l’Environnement (BDHE) ! Bon d’accord, on n’a pas été cherché bien loin, mais c’est beau le renouveau quand même. Et puis, c’était surtout pour que toi, jeune Peip ou jeune 3A, tu comprennes directement l’utilité de ce club... Et si jamais tu as besoin d’en savoir un peu plus malgré ce nom très explicite, nous, c’est simple, on est un petit groupe d’étudiants, avec des préoccupations diverses et variées, tant dans le domaine de l’humanitaire, de la solidarité, de la sensibilisation que dans tout ce qui touche au développement durable et à la responsabilité sociétale. Que tu aies de l’expérience dans un de ces domaines ou que tu sois juste curieux de ce que l’on peut faire ensemble, tu es le/la bienvenu(e) ! Seuls deux critères d’admissibilité: Motivation et Bonne humeur ! A titres d’exemples, par le passé, nous avons organisé des évènement tels que: des collectes (vêtements, nourriture, bouchons), des journées “Don du Sang”, des projections de documentaires, la journée “Je suis ingénieurE”, la Semaine Étudiante du Développement Durable, et bien d’autres !',
                            'Alors, n’attends plus et rejoins nous, à quelque niveau que ce soit !']"
-                       [contact]="'bureauhumanitaire.pns@gmail.com'"
+                       [mail]="'bureauhumanitaire.pns@gmail.com'"
                        [logo]="'assets/logoAssos/logoBDHE.png'"></app-asso-presentation>
 
 <app-asso-presentation [name]="'Bureau du Code'"
@@ -91,5 +91,11 @@
                           'Nous organisons également les hubs de gros concours (Hashcode, Coding battle) au sein du campus afin de faire chauffer les neurones dans la bonne ambiance ces soirées-là, ainsi que des ateliers et conférences.',
                           'Cette année, nous travaillons même sur notre propre concours !',
                           'Les possibilités peuvent être infinies pour peu qu\'on ait des élèves motivés parmi nous, et que les élèves répondent à l\'appel de l\'informatique. Alors n\'hésite pas à venir nous voir pour aider ou avec des idées !']"
-                       [contact]="'bureauducode@gmail.com'"
+                       [facebookName]="'BureauDuCode'"
+                       [facebookUrl]="'https://www.facebook.com/bureauDuCode/'"
+                       [twitterName]="'Bureau_Du_Code'"
+                       [twitterUrl]="'https://twitter.com/Bureau_Du_Code'"
+                       [linkedinName]="'Bureau du Code'"
+                       [linkedinUrl]="'https://www.linkedin.com/company/18454812/'"
+                       [mail]="'bureauducode@gmail.com'"
                        [logo]="'assets/logoAssos/logoBDC.png'"></app-asso-presentation>
