--- a/src/app/components/assos-components/asso-presentation/asso-presentation.component.css
+++ b/src/app/components/assos-components/asso-presentation/asso-presentation.component.css
@@ -74,8 +74,31 @@
 }
 
 .contact {
-    text-align: center;
+    margin-top: 16px;
     color: #004878;
-    padding-left: 75px;
+    text-align: right;
     font-weight: 700;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: space-around;
+    align-content: space-around;
+}
+
+.contact a, .contact a:hover {
+    text-decoration: none;
+    color: #004878;
+}
+
+.socialNetwork {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto;
+    grid-gap: 8px;
+    margin-bottom: 8px;
+}
+
+.socialNetwork mat-icon {
+    margin-top: calc(50% - 14px);
+    color: #0078ae;
 }
