Correction de bug d'heures sur l'ajout d'événement #8
Les événements sont désormais ajoutés avec les heures GMT correctes quel que soit le fuseau horraire

Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/articles-components/add-event/add-event.component.html
+++ b/src/app/components/articles-components/add-event/add-event.component.html
@@ -110,14 +110,15 @@
                              [displayedTitle]="'Ajouter une image principale'"
                              [expectedType]="'image'"
                              [subFolder]="'articleImages'"></app-file-upload>
-            <app-file-upload (downloadableOn)="imageToDisplay = $event"
+            <img *ngIf="imageToDisplay !== ''" [src]="imageToDisplay" alt="">
+            <app-file-upload (downloadableOn)="headerToDisplay = $event"
                              (uploadedOnURL)="event.imageUrl = $event"
-                             *ngIf="imageToDisplay ===''"
+                             *ngIf="headerToDisplay ===''"
                              [displayedTitle]="'Ajouter une bannière'"
                              [expectedType]="'image'"
                              [subFolder]="'articleImages'"></app-file-upload>
+            <img *ngIf="headerToDisplay !== ''" [src]="headerToDisplay" alt="">
         </div>
-        <img *ngIf="imageToDisplay !== ''" [src]="imageToDisplay" alt="">
 
     </div>
 </form>
