--- a/src/app/components/articles-components/add-event/add-event.component.scss
+++ b/src/app/components/articles-components/add-event/add-event.component.scss
@@ -35,7 +35,11 @@ app-file-upload {
 }
 
 .imagesUpload {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 8px;
+  margin: 8px auto;
   text-align: center;
 }
 
