Lier un article à un événement #9
Le formulaire de publciation d'un article permet maintenant de le lier à un événement

Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/articles-components/add-article/add-article.component.html
+++ b/src/app/components/articles-components/add-article/add-article.component.html
@@ -21,6 +21,13 @@
                       type="text"></textarea>
         <mat-error>Ce champ doit être renseigné</mat-error>
     </mat-form-field>
+    <mat-select (selectionChange)="article.eventLinked = $event.value"
+                id="eventLinked"
+                placeholder="Lier à l'événement" required>
+        <mat-option *ngFor="let event of events" [value]="event">
+            {{event.title}}
+        </mat-option>
+    </mat-select>
     <app-file-upload (downloadableOn)="imageToDisplay = $event"
                      (uploadedOnURL)="article.imageUrl = $event"
                      *ngIf="imageToDisplay ===''"
