Fix mineur de marges sur le planning lorsque la barre latérale disparait
Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/events-components/schedule/schedule.component.scss
+++ b/src/app/components/events-components/schedule/schedule.component.scss
@@ -6,6 +6,10 @@
   grid-gap: 1px;
   padding: 1px;
   margin: 8px;
+
+  @media (max-width: 734px) {
+    grid-template-columns: repeat(7, calc(100vw / 7 - 6px));
+  }
 }
 
 .header {
