Fix mineur de grille sur l'ajout d'image/bannière lors d'un ajout d'event
Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/articles-components/add-event/add-event.component.scss
+++ b/src/app/components/articles-components/add-event/add-event.component.scss
@@ -41,6 +41,11 @@ app-file-upload {
   grid-gap: 8px;
   margin: 8px auto;
   text-align: center;
+
+  @media (max-width: 640px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
 }
 
 #dateInputs {
