FIX MAJEUR du service de connexion + Selection asso pour l'event
L'application ne fait plus n'importe quoi quand on ne se connecte pas.
Comportement avant le fix : les fonctions attendant l'utilisateur connecté tournaient dans le vent plutôt que de le trouver null.

La selection d'event lié à un article ne peut se faire qu'avec un event de l'association publiante

Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/articles-components/add-article/add-article.component.scss
+++ b/src/app/components/articles-components/add-article/add-article.component.scss
@@ -21,6 +21,16 @@
   flex-basis: 200px;
 }
 
+#eventLinkForm {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 8px;
+
+  label {
+    margin-top: 2px;
+  }
+}
+
 mat-form-field {
   display: block;
 }
