--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,12 +15,10 @@
                             <a class="nav-link" routerLink="/">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/aboutAll">Nous découvrir<span
-                                    class="sr-only">(current)</span></a>
+                            <a class="nav-link" routerLink="/aboutAll">Nous découvrir</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/login">Se connecter<span
-                                    class="sr-only">(current)</span></a>
+                            <a class="nav-link" routerLink="/login">Se connecter</a>
                         </li>
                     </ul>
                     <!-- menu when connected -->
@@ -33,17 +31,16 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/aboutAll">Nous découvrir<span
-                                    class="sr-only">(current)</span></a>
+                            <a class="nav-link" routerLink="/aboutAll">Nous découvrir</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/subscriptions">Abonnements</a>
                         </li>
-                        <li *ngIf="isLogged && connectedUser.canPublishAs.length > 0"
+                        <li *ngIf="connectedUser.canPublishAs.length > 0"
                             class="nav-item">
                             <a class="nav-link" routerLink="/publish">Publier</a>
                         </li>
-                        <li *ngIf="isLogged && connectedUser.canPublishAs.length > 0"
+                        <li *ngIf="connectedUser.canPublishAs.length > 0"
                             class="nav-item">
                             <a class="nav-link" routerLink="/giveRights">Déléguer</a>
                         </li>
@@ -64,7 +61,7 @@
                     </div>
                     <!-- mobile menu with links -->
                     <div (click)="mobileMenuOpened = false" *ngIf="mobileMenuOpened" class="mobileMenu">
-                        <ul *ngIf="!isLogged || connectedUser === null" class="navbar-nav">
+                        <ul *ngIf="!isLogged" class="navbar-nav">
                             <li class="nav-item">
                                 <a class="nav-link" routerLink="/">Accueil</a>
                             </li>
