Ajout de la description du BREI
Utilisation du composant pour indiquer description, position du logo ainsi que mail de contact du BREI

Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/assos-components/assos-overview/assos-overview.component.html
+++ b/src/app/components/assos-components/assos-overview/assos-overview.component.html
@@ -43,10 +43,17 @@
     </div>
 </div>
 <app-asso-presentation [name]="'Bureau des Élèves'"
-                       [descriptions]="['Le Bureau des Élèves c\’est la plus grosse association du campus et celle dont tu entendras parler tout le temps. Des afterworks, des soirées dantesques et un weekend d\’intégration, voilà au minimum ce qu\’il saura te proposer. C’est ce BDE qui nous permet de facilement sortir, se rencontrer et participer à la vie étudiante.',
-                       'N\’hésite pas à t\’en rapprocher si tu as un don pour l\’organisation, ils pourraient avoir besoin de toi !']"
+                       [descriptions]="['Le Bureau des Élèves c\'est la plus grosse association du campus et celle dont tu entendras parler tout le temps. Des afterworks, des soirées dantesques et un weekend d\’intégration, voilà au minimum ce qu\’il saura te proposer. C’est ce BDE qui nous permet de facilement sortir, se rencontrer et participer à la vie étudiante.',
+                       'N\’hésite pas à t\'en rapprocher si tu as un don pour l\’organisation, ils pourraient avoir besoin de toi !']"
                        [mail]="'bde@polytech.unice.fr'"
                        [logo]="'assets/logoAssos/logoBDE.png'"></app-asso-presentation>
+
+<app-asso-presentation [name]="'Bureau Régional des Élèves Ingénieurs'"
+                       [descriptions]="['Le BREI est le Bureau Régional des Élèves Ingénieurs, une association crée par les différents BDE des écoles d’ingénieurs de la région Provence - Côte d’Azur.',
+                        'Le but principal est de former, informer, fédérer et représenter plus de 5000 étudiants, répartis sur 3 grands pôles universitaires : Nice, Marseille et Toulon. Elle assure la cohésion des étudiants via les évènements proposés entre les écoles et permet de créer un réseau local, complémentaire au réseau national de certaines écoles. Le BREI PCA a également un rôle au national, notamment en tant qu’administrateur du BNEI (Bureau National des Élèves Ingénieurs), l’unique association représentant l’ensemble des étudiants ingénieurs français. Ainsi les problématiques et expériences rencontrées par chaque BREI de France est rapporté au niveau national, leurs permettant sans cesse d’évoluer.',
+                        'Les principales actions du BREI sont de prendre en compte les avis et les positions des élèves ingénieurs sur les sujets qui les touchent et de défendre leur position au national. Mais également de rassembler les élèves ingénieurs des écoles de la région, lors de différents évènements permettant rencontre, discussion ou formation tels que des évènements sportifs, des afterworks ou des week-ends de formation.']"
+                       [mail]="'contact@provence-cotedazur.brei.fr'"
+                       [logo]="'assets/logoAssos/logoBREI.png'"></app-asso-presentation>
 
 <app-asso-presentation [name]="'Bureau des Jeux'"
                        [descriptions]="['Le BDJ est l\'association de Polytech Nice Sophia qui est dédiée à tout type de jeux ! De nombreuses activités ludiques te seront proposées tout au long de l\'année afin de partager de bons moments et apprendre à se connaitre dans un esprit de convivialité. Du laser Quest et du Paintball pour se défouler et affronter ses amis, des Jeux de Rôle pour s\'évader dans un autre monde le temps d\'une soirée, des Karaokés pour montrer ses talents cachés de chanteur... Nous proposons même de quoi se divertir entre deux cours, avec deux baby-foot à disposition dans le foyer des Templiers.',
