Visualisation des images d'un event #2
Suppressions de code mort dans d'autres composants.
Chargement des liens accessibles au moment de récupération de l'event, ce n'est pas fait à la volée.
Changement ud comportement de la grille temporaire

Signed-off-by: Lucas OMS <lucas.oms@hotmail.fr>

--- a/src/app/components/articles-components/add-event/add-event.component.html
+++ b/src/app/components/articles-components/add-event/add-event.component.html
@@ -109,14 +109,14 @@
                              *ngIf="imageToDisplay ===''"
                              [displayedTitle]="'Ajouter une image principale'"
                              [expectedType]="'image'"
-                             [subFolder]="'articleImages'"></app-file-upload>
+                             [subFolder]="'eventImages'"></app-file-upload>
             <img *ngIf="imageToDisplay !== ''" [src]="imageToDisplay" alt="">
             <app-file-upload (downloadableOn)="headerToDisplay = $event"
                              (uploadedOnURL)="event.imageUrl = $event"
                              *ngIf="headerToDisplay ===''"
                              [displayedTitle]="'Ajouter une bannière'"
                              [expectedType]="'image'"
-                             [subFolder]="'articleImages'"></app-file-upload>
+                             [subFolder]="'eventImages'"></app-file-upload>
             <img *ngIf="headerToDisplay !== ''" [src]="headerToDisplay" alt="">
         </div>
 
