--- a/src/app/components/events-components/schedule-event-item/schedule-event-item.component.html
+++ b/src/app/components/events-components/schedule-event-item/schedule-event-item.component.html
@@ -1,3 +1,6 @@
-<p>
-    {{event.title}}
-</p>
+<a [routerLink]="['/event', event.id]">
+    <img *ngIf="event.downloadableImageHeaderUrl !== null"
+         [src]="event.downloadableImageHeaderUrl" alt="">
+    <img *ngIf="event.downloadableImageUrl !== null" [src]="event.downloadableImageUrl" alt="">
+    <p *ngIf="event.downloadableImageUrl === null && event.downloadableImageHeaderUrl === null">{{event.title}}</p>
+</a>
