--- a/src/app/components/events-components/schedule/schedule.component.html
+++ b/src/app/components/events-components/schedule/schedule.component.html
@@ -7,7 +7,7 @@
     <div class="header">Samedi</div>
     <div class="header">Dimanche</div>
     <div *ngFor="let day of days" class="day">
-        <div class="number">
+        <div *ngIf="eventOf(day).length === 0" class="number">
             {{day.getUTCDate()}}
         </div>
         <div *ngFor="let event of eventOf(day)" class="event">
