--- a/src/app/components/events-components/schedule/schedule.component.html
+++ b/src/app/components/events-components/schedule/schedule.component.html
@@ -1,17 +1,25 @@
-<div class="schedule">
-    <div class="header">Lundi</div>
-    <div class="header">Mardi</div>
-    <div class="header">Mercredi</div>
-    <div class="header">Jeudi</div>
-    <div class="header">Vendredi</div>
-    <div class="header">Samedi</div>
-    <div class="header">Dimanche</div>
-    <div *ngFor="let day of days" class="day">
-        <div *ngIf="eventOf(day).length === 0" class="number">
-            {{day.getUTCDate()}}
+<div class="scheduleWrap">
+    <div class="schedule">
+        <div class="header">Lundi</div>
+        <div class="header">Mardi</div>
+        <div class="header">Mercredi</div>
+        <div class="header">Jeudi</div>
+        <div class="header">Vendredi</div>
+        <div class="header">Samedi</div>
+        <div class="header">Dimanche</div>
+        <div *ngFor="let day of days" class="day">
+            <div *ngIf="eventOf(day).length === 0" class="number">
+                {{day.getUTCDate()}}
+            </div>
+            <div *ngFor="let event of eventOf(day)" class="event">
+                <app-schedule-event-item [event]="event"></app-schedule-event-item>
+            </div>
         </div>
-        <div *ngFor="let event of eventOf(day)" class="event">
-            <app-schedule-event-item [event]="event"></app-schedule-event-item>
-        </div>
+    </div>
+    <div class="scheduleCommand">
+        <mat-icon (click)="previousMonth()">fast_rewind</mat-icon>
+        <mat-icon (click)="previousWeek()">arrow_left</mat-icon>
+        <mat-icon (click)="nextWeek()">arrow_right</mat-icon>
+        <mat-icon (click)="nextMonth()">fast_forward</mat-icon>
     </div>
 </div>
