--- a/src/app/components/events-components/schedule/schedule.component.scss
+++ b/src/app/components/events-components/schedule/schedule.component.scss
@@ -1,52 +1,71 @@
-.schedule {
+.scheduleWrap {
   display: grid;
-  //grid-template-columns: repeat(7, 1fr);
-  grid-template-columns: repeat(7, calc(100vw / 7 - 22px));
-  grid-template-rows: auto repeat(4, minmax(90px, auto));
-  grid-gap: 1px;
+  grid-template-rows: auto auto;
+  grid-template-columns: auto;
   padding: 1px;
   margin: 8px;
 
-  @media (max-width: 734px) {
-    grid-template-columns: repeat(7, calc(100vw / 7 - 6px));
-  }
-}
+  .schedule {
+    display: grid;
+    //grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(7, calc(100vw / 7 - 22px));
+    grid-template-rows: auto repeat(4, minmax(90px, auto));
+    grid-gap: 1px;
 
-.header {
-  background-color: var(--primary-color);
-  color: white;
-  text-align: center;
-}
-
-.day {
-  position: relative;
-  cursor: pointer;
-  min-height: 75px;
-
-
-  &:nth-child(2n) {
-    background: #f1f1f1;
-
-    &:hover {
-      background: #e9e9e9;
+    @media (max-width: 734px) {
+      grid-template-columns: repeat(7, calc(100vw / 7 - 6px));
     }
   }
 
-  &:nth-child(2n+1) {
-    background: #dfdfdf;
-
-    &:hover {
-      background: #d7d7d7;
-    }
-  }
-
-  .number {
-    width: 2em;
-    height: 1em;
-    position: absolute;
+  .header {
+    background-color: var(--primary-color);
+    color: white;
     text-align: center;
-    top: 0;
-    right: 0;
+  }
+
+  .day {
+    position: relative;
+    cursor: pointer;
+    min-height: 75px;
+
+
+    &:nth-child(2n) {
+      background: #f1f1f1;
+
+      &:hover {
+        background: #e9e9e9;
+      }
+    }
+
+    &:nth-child(2n+1) {
+      background: #dfdfdf;
+
+      &:hover {
+        background: #d7d7d7;
+      }
+    }
+
+    .number {
+      width: 2em;
+      height: 1em;
+      position: absolute;
+      text-align: center;
+      top: 0;
+      right: 0;
+    }
+  }
+
+  .scheduleCommand {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: 1fr auto auto;
+
+    mat-icon {
+      cursor: pointer;
+      font-size: 35px;
+      width: 35px;
+      height: 35px;
+    }
   }
 }
-
